// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubTitle component matches snapshot with a label prop 1`] = `
<div>
  <h6
    class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
  >
    <span
      class="makeStyles-label-1"
      data-testid="subtitle-label"
    >
      Partner: 
    </span>
    <span
      data-testid="subtitle-content"
    >
      Partner1
    </span>
  </h6>
</div>
`;

exports[`SubTitle component matches snapshot without a label prop 1`] = `
<div>
  <h6
    class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
  >
    <span
      data-testid="subtitle-content"
    >
      Partner1
    </span>
  </h6>
</div>
`;
